--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "start:dev": "NODE_ENV=development nodemon index.js"
   },
   "dependencies": {
+    "africastalking": "^0.5.4",
     "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
