--- a/mcu/requirements.txt
+++ b/mcu/requirements.txt
@@ -1,6 +1,12 @@
+certifi==2021.10.8
+charset-normalizer==2.0.7
 colorzero==2.0
+idna==3.3
 imagezmq==1.1.1
 imutils==0.5.4
 numpy==1.21.2
 pygame==2.0.1
+python-dotenv==0.19.2
 pyzmq==22.3.0
+requests==2.26.0
+urllib3==1.26.7
